assembling header and main components

--- a/maquetacion-principal.html
+++ b/maquetacion-principal.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <!-- styles -->
     <link rel="stylesheet" href="./CSS/estilos.css">
-    <title>Login</title>
+    <!-- title -->
+    <title>Maquetacion Pricipal</title>
 </head>
 <body>
+    <header class="header">
+        <img class="header__img" src="./assets/logo-platzi-video-BW2.png" alt="logo platzi">
+        <div class="header__menu">
+            <div class="header__menu--profile">
+                <img src="./assets/user-icon.png" alt="User" />
+                <p>Perfil</p>
+            </div>
+            <ul>
+                <li><a href="">Cuenta</a></li>
+                <li><a href="">Cerrar Sesión</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <section class="main">
+        <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+        <input class="main__input--search" type="text" placeholder="Buscar...">
+    </section>
+
+    <h2 class="categories__title" >Mi lista</h2>
+
 </body>
 </html>
