Definiendo estilos adicionales, creando componente para error 404

--- a/maquetacion-principal.html
+++ b/maquetacion-principal.html
@@ -12,7 +12,7 @@
     <title>Maquetacion Pricipal</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header header__main">
         <img class="header__img" src="./assets/logo-platzi-video-BW2.png" alt="logo platzi">
         <div class="header__menu">
             <div class="header__menu--profile">
@@ -407,9 +407,13 @@
                 </div>
             </section>
         </div>
-
-
     </section>
+
+    <footer class="footer footer__mains">
+        <a href="/">Términos de uso</a>
+        <a href="/">Declaración de privacidad</a>
+        <a href="/">Centro de ayuda</a>
+    </footer>
 
 </body>
 </html>
